fix: options menu tabs did not scroll if overflowing

--- a/src/options.css
+++ b/src/options.css
@@ -271,6 +271,7 @@ header {
 
 .tab-content {
   font-size: 0.8rem;
+  max-height: 500px;
   min-height: 500px;
   min-width: 240px;
   overflow: auto;
